@@ -3,32 +3,19 @@
 use strict;
 use warnings;
 
-use Tags::Output;
+use Tags::Utils qw(encode_newline);
 
-# Object.
-my $tags = Tags::Output->new;
+# Input text.
+my $text = <<'END';
+foo
+bar
+END
 
-# Put all tag types.
-$tags->put(
-        ['b', 'tag'],
-        ['a', 'par', 'val'],
-        ['c', 'data', \'data'],
-        ['e', 'tag'],
-        ['i', 'target', 'data'],
-        ['b', 'tag'],
-        ['d', 'data', 'data'],
-        ['e', 'tag'],
-);
+# Encode newlines.
+my $out = encode_newline($text);
 
 # Print out.
-print $tags->flush."\n";
+print $out."\n";
 
 # Output:
-# Begin of tag
-# Attribute
-# Comment
-# End of tag
-# Instruction
-# Begin of tag
-# Data
-# End of tag
+# foo\nbar\n
