@@ -3,27 +3,15 @@
 use strict;
 use warnings;
 
-use Encode;
 use Tags::Output::Raw;
 
 # Object.
-my $tags = Tags::Output::Raw->new(
-        'data_callback' => sub {
-                my $data_ar = shift;
-                foreach my $data (@{$data_ar}) {
-                         $data = encode_utf8($data);
-                }
-                return;
-        },
-);
-
-# Data in characters.
-my $data = decode_utf8('řčěšřšč');
+my $tags = Tags::Output::Raw->new;
 
 # Put data.
 $tags->put(
         ['b', 'text'],
-        ['d', $data],
+        ['d', 'data'],
         ['e', 'text'],
 );
 
@@ -31,4 +19,4 @@ $tags->put(
 print $tags->flush."\n";
 
 # Output:
-# <text>řčěšřšč</text>
+# <text>data</text>
