@@ -1,6 +1,7 @@
 0.07
  [Common]
  - Update Module::Install to 1.19 version.
+ - Update examples/ directory.
 
 0.06 2016-03-23T21:19:20+01:00
  [Tags::Output::Raw]
